# closedfish

./: .DS_Store~Stashed changes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  conanfile.txt  vcpkg.json
.github/workflows/: cmake.yml
Board Implementation/: CFBoard.cpp
ChessAI/: DFS1p.cpp  Header.h
Generator/Generator/: generator.cpp  generator.hpp
Generator/Generator.xcodeproj/: project.pbxproj
HeatMap/: heatmap.cpp
Positions/: 0_to_4_positions.txt  6_white_6_black_positions.txt  completely_closed_positions.txt  general_positions.txt  general_positions_spaced_pawns.txt
app/: CMakeLists.txt  SwitchMain.cpp  SwitchMain.h  switch_main.cpp
cmake/: AddGitSubmodule.cmake  CXXCompileFeatures.cmake  Ccache.cmake  Docs.cmake  LTO.cmake  StaticAnalyzers.cmake  Warnings.cmake  optimization.cmake
config/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
docs/html/: Stockfish__connect__main_8cc.html  Stockfish__connect__main_8hpp.html  Stockfish__connect__main_8hpp_source.html  dir_320f4bd41bf9d0cf16eda1323a9ae457.html  dir_4538e1c75b2dee205e39e968e8d447df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8d7f60ba5eb346dd6572d364675e314a.html  dir_994de0fd01319e484ee1453a6afebed0.html  dir_d365e15d984c8d0205117ee0c40d6716.html  dir_db273e7f91b78c8a6db444499f13b599.html  dir_ecf4471701d822c0c032301243bb8d3f.html  dir_f466c1e82a0f34288cd0acce601c95c4.html  dir_f4987f9710727aa9118706613e46500e.html  files.html  general__main_8cc.html  general__main_8hpp.html  general__main_8hpp_source.html  generator_8cpp.html  generator_8cpp__incl.map  generator_8cpp__incl.md5  generator_8hpp.html  generator_8hpp__dep__incl.map  generator_8hpp__dep__incl.md5  generator_8hpp__incl.map  generator_8hpp__incl.md5  generator_8hpp_source.html  globals.html  globals_func.html  graph_legend.html  index.html  input_8cc.html  input_8hpp.html  input_8hpp_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  opening__main_8cc.html  opening__main_8hpp.html  opening__main_8hpp_source.html  output_8cc.html  (+9 more)
draft/: README.md  opencvboard.cpp  test.cpp  uirec.cpp
draft/ClosedFish/: CMakeLists.txt  ChessBot.cpp  ChessBotUI.h  ClosedFish.cpp  HarrisCorner.cpp  HarrisCorner.h  OpenCV.cpp  OpenCV.h  Resource.h  Timers.h  class_decl.h  class_def.cpp  framework.h  stringtable.rc
draft/ConsoleApplication3/: ConsoleApplication3.sln
draft/DFS1P/: DFS1P.cpp  DFS1P.h
draft/Generator_v2/: 0_to_4_positions.txt  6_white_6_black_positions.txt  First 250 closed last 250 open.txt  completely_closed_positions.txt  general_positions.txt  general_positions_spaced_pawns.txt  generator convert.py  test.txt
draft/Weak Pawns Test/: weak_pawns_test.cpp
draft/WeakPawnsTest/: weak_pawns_test.cpp
draft/board_tests/: README.md  main.cpp  test_Board_Implementation.cpp  test_Board_Implementation.h  test_from_fen.cpp  test_from_fen.h  test_naive_check_check.cpp  test_naive_check_check.h  test_to_fen.cpp  test_to_fen.h  tests
draft/bug107-fix/: README.md  main.cpp
draft/bug84-fix/: README.md  main.cpp
draft/chess_AI/: closenessAI.h  general_regression.h  main.cpp  tempCodeRunnerFile.cpp
draft/cv_board/: cv_board.sln
draft/dfs1/: Breakthrough2.cpp  ChessAI.sln  ChessAI.vcxproj  ChessAI.vcxproj.filters  DFS1p.cpp  DFS1p.h  stockfish_naive_eval.h
draft/heatmap/: heatmap.cpp
lib/: CMakeLists.txt  README.md
lib/Breakthrough2/: Breakthrough2.cpp  Breakthrough2.h  CMakeLists.txt  stockfish_naive_eval.cpp  stockfish_naive_eval.h
lib/DFS1P/: CMakeLists.txt  DFS1P.cpp  DFS1P.h
lib/board_implementation/: CFBoard.cpp  CFBoard.h  CMakeLists.txt  naiveCheckCheck.cpp  test.cpp
lib/engine_wrapper/: CMakeLists.txt  EngineWrapper.cpp  EngineWrapper.h
lib/heatmap/: BitOperations.cpp  BitOperations.h  CMakeLists.txt  Heatmap.cpp  Heatmap.h
lib/logger/: CMakeLists.txt  logger.cpp  logger.h
lib/utils/: CMakeLists.txt  logger.cpp  utils.cpp  utils.h
lib/weak_pawns/: CMakeLists.txt  PieceMovements.cpp  PieceMovements.h  WeakPawns.cpp  WeakPawns.h
poc/: .gitignore  try_interface  try_interface.cpp  try_uci  try_uci.cpp
profRequest(Doc)/: project_design.md
reports/: 18_12_2022  2022-01-8.txt  2022-11-27.txt  2022-12-04.txt  2022-12-11.txt  2022-12-18.txt  2023-01-08.txt  2023-01-15  2023-01-15.txt  2023-01-22.txt  2023-01-22txt
src/: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  switch_main.cc  switch_main.cpp
src/connectors/ClosedfishConnect/: CMakeLists.txt  ClosedfishConnect.cpp  ClosedfishConnect.h  README.md
src/connectors/ConnectorsUI/: CMakeLists.txt  ConnectUI-SAI.cc  ConnectUI-SAI.h  ConnectUI-SAI.hpp  ConnectUISAI.cpp  ConnectUISAI.h
src/connectors/StockfishConnect/: CMakeLists.txt  README.md  StockfishConnect.cpp  StockfishConnect.h
src/connectors/Stockfish_connect/: CMakeLists.txt
src/connectors/general/: CMakeLists.txt
src/connectors/stockfish_connect/: CMakeLists.txt  README.md
src/engine/: CMakeLists.txt  README.md  SwitchEngine.cpp  SwitchEngine.h
src/factorial/: CMakeLists.txt  README.md  factorial.cpp  factorial.hpp
src/input/: CMakeLists.txt  README.md  input.cpp  input.h
src/opening/: CMakeLists.txt  OpeningMain.cpp  README.md
src/output/: CMakeLists.txt  README.md  output.cpp  output.h
src/play/: CMakeLists.txt  GeneralRegression.cpp  GeneralRegression.h  PlayMain.cpp  PlayMain.h  PlayMain.hpp  TestingRegressions.cpp  closenessAI.h  general_regression.h  play_main.cc  play_main.cpp  play_main.hpp  tempCodeRunnerFile.cpp
src/test/: CMakeLists.txt  test_main.cpp
test/: CMakeLists.txt  TestMain.cpp  test_main.cpp
test/board/: CMakeLists.txt  README.md  test_from_fen.cpp  test_naive_check_check.cpp  test_naive_check_check.h  test_to_fen.cpp  test_to_fen.h
test/board/Tests/: test_Board_Implementation.cpp  test_Board_Implementation.h
test/integration/: CMakeLists.txt  TestChess.cpp  TestChessHelper.cpp  TestChessHelper.h  TestClosedPositions.cpp  TestClosedPositions.h  TestRandomMove.cpp  TestRandomMove.h
test/integration/data/: castaldi_tartakower_1937.parsed.txt  ozols_reid_1937.parsed.txt
(+211 files in other folders)
